2006-12-27  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: added test.

2006-12-11  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: added test.

2006-12-07  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: fixed NunitWeb tests.

2006-12-06  Yoni Klain   <yonik@mainsoft.com>

	* ClientScriptManagerTest.cs: Change Render () for 2.0 definition

2006-11-29  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: fixed NunitWeb tests.

2006-11-29  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: removed NotWorking attributes.

2006-11-29  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: removed NotWorking attributes.

2006-11-28  Igor Zelmanovich   <igorz@mainsoft.com>

	* PageTest.cs: removed NotWorking attributes.

2006-11-27  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes.

2006-11-27  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes.

2006-11-27  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes.

2006-11-27  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes.

2006-11-26  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes, fixed tests.

2006-11-26  Igor Zelmanovich   <igorz@mainsoft.com>

	* ClientScriptManagerTest.cs: removed NotWorking attributes.

2006-11-22  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: removed NotWorking attributes.

2006-11-22  Yoni Klain   <yonik@mainsoft.com>

	* PageTest.cs: added new tests

2006-11-22  Yoni Klain   <yonik@mainsoft.com>

	* ControlTest.cs: add directive for 1.1

2006-11-21  Yoni Klain   <yonik@mainsoft.com>

	* ControlTest.cs: added test.
	* New resource Theme2.skin

2006-11-21  Igor Zelmanovich   <igorz@mainsoft.com>

	* ControlTest.cs: added test.

2006-11-20  Igor Zelmanovich   <igorz@mainsoft.com>
